--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title></title>
+    <title>Semantic Webpage</title>
   </head>
   <body>
     <header>
@@ -29,13 +29,13 @@
           <p>
             This is a very funny, interesting video. Watch it. But it drives this
             point home:
+          </p>
             <blockquote cite="http://www.worldwildlife.org/who/index.html">
               For 50 years, WWF has been protecting the future of nature. The
               world's leading conservation organization, WWF works in 100 countries
                and is supported by 1.2 million members in the United States and
                close to 5 million globally.
             </blockquote>
-          </p>
         </section>
         <video width="480" height="360" controls>
           <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4">
